<resources>
    <string name="app_name">MusicApp</string>
    <string name="main_title">Search your favourite music </string>
    <string name="search_placeholder">insert author, song, genre, period etc... </string>
    <string name="search_button">Search</string>
    <string name="song_title">Title</string>
    <string name="times_played">Times played</string>
    <string name="favourite_title">Your favourite music</string>
    <string name="favourite_title_one">1. <u>Hotel California</u></string>
    <string name="favourite_times_one">25</string>
    <string name="favourite_title_two">2. <u>Beethoven 7 Symphony</u></string>
    <string name="favourite_times_two">20</string>
    <string name="favourite_title_three">3. <u>Paganini - Caprice 24</u></string>
    <string name="favourite_times_three">18</string>
    <string name="result_title_one">1. Paradise city</string>
    <string name="result_artist_one">Guns \'n Roses</string>
    <string name="result_lenght_one">6:49</string>
    <string name="result_title_two">2. Bohemian Rapsody</string>
    <string name="result_artist_two">Queen</string>
    <string name="result_lenght_two">5:54</string>
    <string name="result_title_three">3. Jailhouse Rock</string>
    <string name="result_artist_three">Elvis Presley (The King)</string>
    <string name="result_lenght_three">2:37</string>
    <string name="free_minutes_msg">You have 60 min of free music left</string>
    <string name="buy_minutes_button">Get unlimited minutes!</string>
    <string name="main_title_search">Results for \"%1$s\"</string>
    <string name="result_lenght">Lenght</string>
    <string name="search_activity_title">Search Results</string>
    <string name="search_empty">Please enter a search term</string>
    <string name="title_activity_music_detail">Music detail</string>
    <string name="title_payment">Payment</string>
    <string name="main_title_payment">PayPal Android SDK</string>
    <string name="main_descr_payment">The PayPal Android SDK makes it easy to add PayPal payments to mobile apps. The SDK supports two use cases for making payments - Single Payment and Future Payments - and a third use case for obtaining information about the customer - Profile Sharing</string>
</resources>
