<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ListResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/MainTitleTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/main_title_search"
            android:textColor="@color/colorTopTitle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/favouriteTitleId"
                style="@style/FavouriteStyle"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/song_title" />

            <TextView
                style="@style/FavouriteStyle"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:text="@string/result_lenght" />

            <!-- Result list -->

            <TextView
                android:id="@+id/resultTitleOne"
                style="@style/SearchMusicTitleStyle"
                android:layout_below="@id/favouriteTitleId"
                android:layout_marginLeft="8dp"
                android:text="@string/favourite_title_one" />

            <TextView
                android:id="@+id/resultArtistOne"
                style="@style/SearchResultArtistStyle"
                android:layout_below="@id/resultTitleOne"
                android:layout_marginLeft="8dp"
                android:text="@string/result_artist_one" />

            <TextView
                style="@style/SearchMusicTitleStyle"
                android:layout_alignParentRight="true"
                android:layout_below="@id/favouriteTitleId"
                android:layout_marginRight="8dp"
                android:text="@string/result_lenght_one" />

            <!-- Second line -->
            <TextView
                android:id="@+id/resultTitleTwo"
                style="@style/SearchMusicTitleStyle"
                android:layout_below="@id/resultArtistOne"
                android:layout_marginLeft="8dp"
                android:text="@string/favourite_title_two" />
            <TextView
                android:id="@+id/resultArtistTwo"
                style="@style/SearchResultArtistStyle"
                android:layout_below="@id/resultTitleTwo"
                android:layout_marginLeft="8dp"
                android:text="@string/result_artist_two" />

            <TextView
                style="@style/SearchMusicTitleStyle"
                android:layout_alignParentRight="true"
                android:layout_below="@id/resultArtistOne"
                android:layout_marginRight="8dp"
                android:text="@string/result_lenght_two" />
            <!-- Third line -->

            <TextView
                android:id="@+id/resultTitleThree"
                style="@style/SearchMusicTitleStyle"
                android:layout_below="@id/resultArtistTwo"
                android:layout_marginLeft="8dp"
                android:text="@string/favourite_title_three" />

            <TextView
                android:id="@+id/resultArtistThree"
                style="@style/SearchResultArtistStyle"
                android:layout_below="@id/resultTitleThree"
                android:layout_marginLeft="8dp"
                android:text="@string/result_artist_three" />

            <TextView
                style="@style/SearchMusicTitleStyle"
                android:layout_alignParentRight="true"
                android:layout_below="@id/resultArtistTwo"
                android:layout_marginRight="8dp"
                android:text="@string/result_lenght_three" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/free_minutes_msg"
            android:textColor="@color/colorTopTitle"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            style="@style/BuyButton"
            android:layout_marginBottom="16dp"
            android:text="@string/buy_minutes_button" />


    </LinearLayout>

</ScrollView>
