<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/MainTitleTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/main_title"
            android:textColor="#757575" />

        <EditText
            style="@style/SearchField"
            android:hint="@string/search_placeholder"/>

        <Button
            style="@style/SearchButton"
            android:text="@string/search_button"
            />

   </LinearLayout>

</ScrollView>
